evidence/configurations/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 25rp19824-turikumwenimana
  labels:
    name: 25rp19824-turikumwenimana
    environment: production
    managed-by: devops
